--- a/src/components/SideBar/Sidebar.css
+++ b/src/components/SideBar/Sidebar.css
@@ -384,7 +384,7 @@
 .menu-toggle {
   display: none; 
   position: fixed;
-  top: 10px;
+  top: 50px;
   left: 10px;
   z-index: 1000;
   background-color: var(--dark);
